# src/routes/telegramBots.ts
@@ -5,6 +5,6 @@ import {Role} from "../dto/account";
 const permit = require("../middleware/auth");
 const telegramBotRouter = express.Router();
 
-telegramBotRouter.get('/api/telegramBots', permit([Role.ANONYMOUS, Role.USER, Role.ADMIN]), controller.getTelegramBotLink);
+telegramBotRouter.get('/api/telegramBots', permit([Role.USER, Role.ADMIN]), controller.getTelegramBotLink);
 
 export default telegramBotRouter;
